--- a/assignments/IN2023_42/main.tex
+++ b/assignments/IN2023_42/main.tex
@@ -158,4 +158,4 @@ A &= \brak{1 \oplus 1,1,0,1}\\
     B& =\brak{1,1,0,1}
 \end{align}
 Therefore option (C) is true.
-\end{document}=
+\end{document}
