--- a/assignments/IN2023_42/main.tex
+++ b/assignments/IN2023_42/main.tex
@@ -125,7 +125,7 @@ When the shift control is high, what will be the binary content of the shift reg
 \end{tikzpicture}
 \end{center}
 \begin{enumerate}
-    \item  $A  1101, B=1101$
+    \item  $A = 1101, B=1101$
     \item  $A = 1110, B=1001$
     \item  $A = 0101, B=1101$
     \item  $A = 1010, B=1111$
